# pi-robot

./: CLAUDE.md  CMakeLists.txt  PrepareForWork.txt  ble_env.txt  data.sh  make_db.sh  mosquitto.sh  mosquitto_tls.txt  mpub.sh  msub.sh  third-party.sh  wpa_supplicant.conf
cert/: smtp.gmal.com.pem
conf/: Led.json  ReflectiveSensor.json  Weather.json  lcd.json  mosquitto.conf.dk  mosquitto.doc  nohardware.json  pi-mqqt-conf-tls.json  pi-mqqt-conf.json  sleds.json
pi-core/: CMakeLists.txt  core_clock_pwm.h  core_common.h  core_dma.cpp  core_dma.h  core_mailbox.h  core_memory.h  core_pwm.h  mailbox.c  mailbox.h
pi-data/: DataStorage.h  FileStorage.h  MqttStorage.h
pi-env/: CMakeLists.txt  Environment.cpp  Environment.h
pi-http/: CMakeLists.txt  WebSettings.cpp  WebSettings.h
pi-library/: Adafruit_PWMServoDriver.cpp  Adafruit_PWMServoDriver.h  AnalogDataProviderItf.h  AnalogDataReceiverItf.h  AnalogLightMeter.cpp  AnalogLightMeter.h  AnalogMeterSimple.h  CMakeLists.txt  DCMotor.cpp  DCMotor.h  DRV8825StepperMotor.cpp  DRV8825StepperMotor.h  DRV8834StepperMotor.cpp  DRV8834StepperMotor.h  Drv8825_8834.h  Drv8835.cpp  Drv8835.h  GpioProvider.h  GpioProviderFake.cpp  GpioProviderFake.h  GpioProviderMCP23008.h  GpioProviderMCP23017.cpp  GpioProviderMCP23017.h  GpioProviderMCP230xx.cpp  GpioProviderMCP230xx.h  GpioProviderPCA9685.cpp  GpioProviderPCA9685.h  GpioProviderSimple.cpp  GpioProviderSimple.h  I2C.h  I2CWrapper.cpp  I2CWrapper.h  MCP320X.cpp  MCP320X.h  Mpu6050.cpp  Mpu6050.h  Mpu6050_defs.h  PIRobot_loadconf.cpp  PiRobot.cpp  PiRobot.h  (+50 more)
pi-main/: pi-main.h
pi-mqqt/: CMakeLists.txt  MosquittoClient.cpp  MosquittoClient.h  MqqtClient.cpp  MqqtClient.h  MqqtClientItf.h  MqqtDefines.h  MqqtServerInfo.cpp  MqqtServerInfo.h  mqqt_object.h  pi-mqqt-conf.json
pi-mqtt/: CMakeLists.txt  MosquittoClient.cpp  MosquittoClient.h  MqttClient.cpp  MqttClient.h  MqttClientItf.h  MqttDefines.h  MqttServerInfo.cpp  MqttServerInfo.h  Mqtt_object.h  mqtt_object.h
pi-smachine/: CMakeLists.txt  Environment.cpp  Environment.h  Event.cpp  Event.h  EventChangeState.cpp  EventChangeState.h  State.cpp  State.h  StateFactory.cpp  StateFactory.h  StateInit.cpp  StateInit.h  StateMachine.cpp  StateMachine.h  StateMachineItf.cpp  StateMachineItf.h  Timer.cpp  Timer.h  TimerID.h  Timers.cpp  Timers.h  Timers2.cpp  Timers2.h  TimersItf.cpp  TimersItf.h  version.h.in
pi-smashine/: CMakeLists.txt  Event.cpp  Event.h  EventChangeState.cpp  EventChangeState.h  State.cpp  State.h  StateFactory.cpp  StateFactory.h  StateInit.cpp  StateInit.h  StateMashine.cpp  StateMashine.h  StateMashineItf.cpp  StateMashineItf.h  Timer.cpp  Timer.h  TimerID.h  Timers.cpp  Timers.h  TimersItf.cpp  TimersItf.h
pi-sql/: CMakeLists.txt  pisqlite.cpp  pisqlite.h
pi-tests/: CMakeLists.txt
pi-tests/test-dma/: CMakeLists.txt  dma_test.json  test_dma.cpp  test_dma_info.cpp  test_mbox.cpp  test_phys_mem.cpp  test_pwm.cpp
pi-tests/test-general/: CMakeLists.txt  test_cbuff.cpp  test_fstorage.cpp
pi-tests/test-gpio/: CMakeLists.txt  test_gpio_simple.cpp  test_gpio_simple_edge.cpp  test_gpio_simple_pull.cpp
pi-tests/test-http/: CMakeLists.txt  default.html  test_http.cpp  web_settings_test.cpp  web_settings_test.h
pi-tests/test-i2c/: CMakeLists.txt  arduino.cpp  test_i2c_bmp280.cpp  test_i2c_sgp30.cpp  test_i2c_tsl2561.cpp
pi-tests/test-json/: CMakeLists.txt  cJSON_wrap.h  file_loader.h  test_cjson.cpp
pi-tests/test-main/: CMakeLists.txt  Context.h  defines.h  factory.h  main.cpp  state_next.h  ststates.h
pi-tests/test-mqtt/: CMakeLists.txt  pi-mqqt-conf.json  test-mqtt.json  test_mqtt.cpp  test_mqtt_storage.cpp
pi-tests/test-spi/: CMakeLists.txt  arduino.cpp
pi-tests/test-timers/: CMakeLists.txt  Timer.cpp  Timer.h  Timers2.cpp  Timers2.h  test_timer.cpp
pi-utils/: CMakeLists.txt  CircularBuffer.h  JsonHelper.h  Threaded.cpp  Threaded.h  cJSON_wrap.h  crc.cpp  crc.h  fstorage.cpp  fstorage.h  logger.cpp  logger.h  networkinfo.cpp  networkinfo.h  send_email.h  smallthings.cpp  smallthings.h  timers.h  web_utils.h
project1/: CMakeLists.txt  MyEnv.h  MyStateFactory.cpp  MyStateFactory.h  PiRobotPrj1.cpp  PiRobotPrj1.h  StateEnvAnalize.cpp  StateEnvAnalize.h  StateNoHardware.cpp  StateNoHardware.h  StateUpdateState.cpp  StateUpdateState.h  StateWeather.cpp  StateWeather.h  defines.h  main.cpp  pi-mqqt-conf.json  project1.json
spi_test/: CMakeLists.txt  MyEnv.h  MyStateFactory.cpp  MyStateFactory.h  PiRobotPrj1.cpp  PiRobotPrj1.h  StateEnvAnalize.cpp  StateEnvAnalize.h  defines.h  main.cpp
sql/: create.sql
thrd-party-support/: mosquittoCPack.cmake  pi-robot-thrd-party_deb.txt
version1/: CMakeLists.txt  RealWorld.cpp  RealWorld.h  main.cpp
weather/: CMakeLists.txt  DataStorage.h  StInitialization.cpp  StInitialization.h  StInitializeLcd.cpp  StInitializeLcd.h  StInitializeSensors.cpp  StInitializeSensors.h  StMeasurement.cpp  StMeasurement.h  StNoHardware.cpp  StNoHardware.h  WeatherStFactory.cpp  WeatherStFactory.h  WebSettingsWeather.h  context.cpp  context.h  defines.h  lcdstrings.h  main.cpp  measurement.h  timers_info.txt  version.h.in  weather.json  wenvironment.h
weather/daemon/: service.install.txt  weather
web/: status.html
web/en/: default.html  files.html  graph.html  status.html
web/ru/: default.html
web/static/css/: weather.css
